# src/routes/v1/user.js
@@ -6,6 +6,7 @@ const userController = require('../../controllers/v1/userController');
 
 // middlewares
 const isAuth = require('../../middlewares/isAuth');
+const isSuperAdmin = require('../../middlewares/isSuperAdmin');
 
 router.get('/' , userController.getUsers);
 router.post('/' , userController.store);
@@ -16,6 +17,7 @@ router.patch('/me', isAuth , userController.updateUser);
 router.delete('/me', isAuth , userController.deleteUser);
 router.post('/forget' , userController.forget);
 router.post('/reset/:token' , userController.reset);
+router.post('/add-admin/:id' , isAuth , isSuperAdmin , userController.addAdmin);
 
 
 module.exports = router;
